--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "compression": "^1.6.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.0.x",
     "express": "~4.13.1",
+    "h5bp": "^0.1.4",
     "jade": "~1.11.0",
-    "ejs":"^2.0.x",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "flightplan": "^0.6.7"
   }
 }
