--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "grunt build;node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -13,11 +13,16 @@
     "ejs": "^2.0.x",
     "express": "~4.13.1",
     "h5bp": "^0.1.4",
+    "imagemin-mozjpeg": "^5.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "flightplan": "^0.6.7"
+    "flightplan": "^0.6.7",
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
