--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "grunt build;node ./bin/www"
+    "dev": "grunt build; node ./bin/www",
+    "build": "grunt build",
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -12,8 +14,6 @@
     "debug": "~2.2.0",
     "ejs": "^2.0.x",
     "express": "~4.13.1",
-    "h5bp": "^0.1.4",
-    "imagemin-mozjpeg": "^5.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
@@ -21,8 +21,11 @@
   "devDependencies": {
     "flightplan": "^0.6.7",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1"
   }
 }
